<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <!-- 名字必须是 arm_agent_lite -->
  <name>arm_agent_lite</name>
  <version>0.0.0</version>
  <description>The ArmAgentLite core package</description>
  <maintainer email="your_email@todo.todo">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>arm_agent_interfaces</depend>
  <depend>rclcpp_action</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
